--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
       - key: DEBUG
         value: "False"
       - key: ALLOWED_HOSTS
-        value: "mbox.onrender.com"
+        value: "mbox-z3f9.onrender.com"
       - key: PYTHON_VERSION
         value: "3.11"
       # Add this only if you created a PostgreSQL DB via Render
